# AI-AUP

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  index.md  philosophy.md
examples/: 01_prompt_template.py  02_chunk_text.py  03_retry_fallback.py  04_token_estimate.py
src/aup/: __about__.py  __init__.py  errors.py
src/aup/chunking/: __init__.py  semantic.py  simple.py
src/aup/cli/: __init__.py  main.py
src/aup/models/: __init__.py  byo_client.py  interfaces.py
src/aup/prompts/: __init__.py  abc.py  render.py  template.py
src/aup/retries/: __init__.py  retry.py
src/aup/tokens/: __init__.py  estimate.py  providers.py
src/aup/utils/: __init__.py  env.py  typing.py
tests/: test_chunking_simple.py  test_prompt_template.py  test_retry.py  test_token_estimate.py
